0.0.2
  13-12-21
  Feature
  * #54548: CSS class for form lables
            Effected files:
            * ext_tables.sql
            * locallang_db.xml
            * tca.php
            * static/views/51370
              * constants.txt
              * setup.txt
  Development
  * #i0003: Integration of Radial Search
  * #i0002: Integration of route

0.0.1
  13-08-26
  Initial Release
  * Dirk Wildt  <http://wildt.at.die-netzmacher.de>