@@ -1,6 +1,9 @@
 0.0.2
   13-12-21
-  Feature
+  Features
+  * #54575: Evaluate Backend tables route
+            Effected files:
+            * ext_tables.php
   * #54548: CSS class for form lables
             Effected files:
             * ext_tables.sql
